--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-5 (5.4.0-6ubuntu1~16.04.6) xenial; urgency=medium
+
+  * Add thunderx2 support. LP: #1727540.
+
+ -- dann frazier <dannf@ubuntu.com>  Tue, 16 Jan 2018 10:27:06 -0700
+
 gcc-5 (5.4.0-6ubuntu1~16.04.5) xenial-proposed; urgency=medium
 
   * SRU
