--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+gcc-5 (5.4.0-6ubuntu1~16.04.8) xenial-security; urgency=medium
+
+  * Add retpoline support for x86 via adding -mindirect-branch=,
+    -mindirect-branch-register, and -mfunction-return= support
+    - 0001-i386-Move-struct-ix86_frame-to-machine_function.diff,
+      0002-i386-Use-reference-of-struct-ix86_frame-to-avoid-cop.diff,
+      0003-i386-More-use-reference-of-struct-ix86_frame-to-avoi.diff,
+      0004-i386-Don-t-use-reference-of-struct-ix86_frame.diff,
+      0005-x86-Add-mindirect-branch.diff,
+      0006-x86-Add-mfunction-return.diff,
+      0007-x86-Add-mindirect-branch-register.diff,
+      0008-x86-Add-V-register-operand-modifier.diff,
+      0009-x86-Disallow-mindirect-branch-mfunction-return-with-.patch:
+      implement -mindirect-branch=<keep|thunk|thunk-inline|thunk-extern>
+      with attribute support, -mindirect-branch-register, and
+      -mfunction-return=<thunk|thunk-inline|thunk-extern> with
+      attribute support. Thanks to H.J. Lu.
+  * Add retpoline support for ppc64 via adding
+    -mspeculate-indirect-jumps support
+    - ppc-add-mspeculate-indirect-jumps: implement
+      -mspeculate-indirect-jumps. Thanks to Bill Schmidt.
+
+ -- Steve Beattie <sbeattie@ubuntu.com>  Fri, 26 Jan 2018 00:08:13 -0800
+
 gcc-5 (5.4.0-6ubuntu1~16.04.6) xenial; urgency=medium
 
   * Add thunderx2 support. LP: #1727540.
