Import patches-unapplied version 5.4.0-6ubuntu1~16.04.9 to ubuntu/xenial-proposed
Imported using git-ubuntu import.

Changelog parent: 3ac8b9b72e157f9336f690a38281f7059e539b69

New changelog entries:
  * Revert retpoline changes of ppc64el as per the recommendation from
    Bill Schmidt of IBM.
    - ppc-add-mspeculate-indirect-jumps: drop.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gcc-5 (5.4.0-6ubuntu1~16.04.9) xenial-security; urgency=medium
+
+  * Revert retpoline changes of ppc64el as per the recommendation from
+    Bill Schmidt of IBM.
+    - ppc-add-mspeculate-indirect-jumps: drop.
+
+ -- Steve Beattie <sbeattie@ubuntu.com>  Mon, 05 Feb 2018 15:48:15 -0800
+
 gcc-5 (5.4.0-6ubuntu1~16.04.8) xenial-security; urgency=medium
 
   * Add retpoline support for x86 via adding -mindirect-branch=,
