debian: Update changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,11 @@
-gcc-5 (5.4.0-6ubuntu1~16.04.11) xenial; urgency=medium
+gcc-5 (5.4.0+6ubuntu1~16.04.11) xenial; urgency=medium
+
+  * Backport upstream revision r261588 to fix building Skia on armhf.
+    LP: #1838419
+
+ -- Alfred Neumayer <dev.beidl@gmail.com>  Wed, 01 Aug 2018 15:46:38 +0100
+
+ gcc-5 (5.4.0-6ubuntu1~16.04.11) xenial; urgency=medium
 
   * Backport upstream revision r235876 to correct PIC_OFFSET_TABLE_REGNUM
     on ppc64el.
