--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gcc-5 (5.4.0-6ubuntu1~16.04.13) xenial; urgency=medium
+gcc-5 (5.4.0-6ubuntu1~16.04.11~ubports1) xenial; urgency=medium
 
   * prototype build
 
- -- Chris Clime <chris.clime@gmx.net>  Wed, 12 Nov 2019 18:49:24 +0200
+ -- Chris Clime <chris.clime@gmx.net>  Thu, 02 Jan 2020 13:28:24 +0200
  
 gcc-5 (5.4.0+6ubuntu1~16.04.11) xenial; urgency=medium
 
